# SlicerMarkupConstraints

./: .gitignore  CMakeLists.txt  README.md  sample.py
Docs/: API.md  Architecture.md
MarkupConstraints/: CMakeLists.txt  MarkupConstraints.py
MarkupConstraints/Testing/: CMakeLists.txt  MarkupConstraints_Constraints.py  MarkupConstraints_ControlPoint.py
